--- a/MyStock.Application/MyStock.Application.csproj
+++ b/MyStock.Application/MyStock.Application.csproj
@@ -9,4 +9,25 @@
     <ProjectReference Include="..\MyStock.Core\MyStock.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="Assets\Lang\Lang.Designer.cs">
+      <DependentUpon>Lang.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Assets\Lang\Lang.resx">
+      <LastGenOutput>Lang.Designer.cs</LastGenOutput>
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <CustomToolNamespace>MyStock.Application.Assets.Lang;</CustomToolNamespace>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Assets\Lang\Lang.ru-RU.resx">
+      <SubType>Designer</SubType>
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <CustomToolNamespace>MyStock.Application.Assets.Lang;</CustomToolNamespace>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
