--- a/MyStock.Core/MyStock.Core.csproj
+++ b/MyStock.Core/MyStock.Core.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="6.3.0" />
+    <PackageReference Include="DynamicData" Version="7.4.11" />
     <PackageReference Include="FluentValidation" Version="10.3.6" />
     <PackageReference Include="AutoMapper" Version="11.0.0" />
     <PackageReference Include="ReactiveUI" Version="17.1.17" />
