--- a/MyStock/MyStock.csproj
+++ b/MyStock/MyStock.csproj
@@ -67,6 +67,7 @@
     <PackageReference Include="MahApps.Metro" Version="2.4.9" />
     <PackageReference Include="MaterialDesignThemes" Version="4.3.0" />
     <PackageReference Include="MaterialDesignThemes.MahApps" Version="0.2.0" />
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.39" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="ReactiveUI.WPF" Version="17.1.17" />
     <PackageReference Include="Syncfusion.Licensing" Version="19.4.0.48" />
@@ -86,7 +87,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Menu\" />
     <Folder Include="ViewModels\" />
   </ItemGroup>
 </Project>
