--- a/MyStock.Persistence/MyStock.Persistence.csproj
+++ b/MyStock.Persistence/MyStock.Persistence.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\MyStock.Domain\MyStock.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="TableConfigurations\" />
+  </ItemGroup>
+
 </Project>
