--- a/MyStock/Assets/Settings/appsettings.json
+++ b/MyStock/Assets/Settings/appsettings.json
@@ -3,6 +3,7 @@
   "UISettings": {
     "Theme": 0,
     "PrimaryColor": "Blue",
-    "SecondaryColor": "Orange"
+    "SecondaryColor": "Orange",
+    "AppFontSize": 12
   }
 }
